Wayland apps die as soon as the mouse pointer enters them
Wayland apps die as soon as the mouse pointer enters them, using mutter/gnome-shell main:
(gnome-shell:2610): mutter-WARNING **: 17:49:02.952: WL: error in client communication (pid 2915)
Gdk-Message: 17:49:02.952: Error 71 (Protocol error) dispatching to Wayland display.
and
(gnome-shell:2610): mutter-WARNING **: 17:49:08.551: WL: error in client communication (pid 2956)
Gdk-Message: 17:49:08.551: Error 71 (Protocol error) dispatching to Wayland display.
Edited by Daniel van Vugt