wayland/surface: Disable WL_SURFACE_ERROR_INVALID_SIZE check again

The check was introduces in ab17c98c947aa9a53eecf27d7242c18c5dccbbfc
but turned out to trigger client crashes in common cases.
Turn it into a warning for now until clients are fixed.

Closes https://gitlab.gnome.org/GNOME/mutter/-/issues/2083
Closes https://gitlab.gnome.org/GNOME/mutter/-/issues/2163

Part-of: <https://gitlab.gnome.org/GNOME/mutter/-/merge_requests/2335>